# ScienceFair2024

./: .clangd  Makefile  ScienceFair  Session.vim  benchmark_results_1.csv  benchmark_results_2.csv  benchmark_results_3.csv  data.py  main.py  my_program  out.txt  plan.md  randomMazePerIteration.csv  temp30.csv
cpp/: CMakeLists.txt  build.bat  compile.bat  main.cpp
cpp/include/: game.h  render.h  runner.h  state.h  test.h
cpp/src/: game.cpp  render.cpp  runner.cpp  state.cpp  test.cpp
data/: plot_data.py  time_test.py
engine/: game.py
engine/game/: game.py
engine/player/: action_group.py  log_groups.py
engine/render/: action_renderer.py  generate_screen_data.py  maze_renderer.py  path_renderer.py  screen_data.py
maze/: actions.py  algorithms.py  logger.py  out.py  runner.py  state.py
py/: algorithms.py  logger.py  main.py  out.py  runner.py  state.py
py/engine/: game.py  main.py  render.py
